--- a/d/de/dea/dearcinema.com.html
+++ b/d/de/dea/dearcinema.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the dearcinema.com privacy policy that was archived on 2010-06-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100617225353id_/http%3A//dearcinema.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dearcinema.com privacy policy that was archived on 2010-09-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100923120630id_/http%3A//dearcinema.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><!-- $Id: page.tpl.php 11 2008-02-21 13:24:51Z bill $ --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -8,12 +8,16 @@
 <meta name="description" content="Dearcinema.com Pvt Limited and its subsidiaries and affiliates (&quot;dearcinema.com&quot;) respects your privacy. This Privacy Policy provides succinctly the manner your data is collected and used by dearcinema.com. You are advised to please read the Privacy Policy carefully.">
 <link rel="shortcut icon" href="/sites/all/themes/tapestry/images/gerberdaisy/dearcinema-favicon.png" type="image/x-icon">
   <meta name="google-site-verification" content="TRYttvbsjt3pj4txE5nlUlEdOex81l3eZJEElwTt5HM">
-  <link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/views/css/views.css?S">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/default/files/css/css_04f94ff7260c7aae04c0f7d43a398575.css">
-  <script type="text/javascript" src="/sites/default/files/js/js_81b7b24204c4bd17c979e80d56a02fd5.jsmin.js"></script>
+  <link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/views/css/views.css?f">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/default/files/css/css_07412978f238d65fb31eed54aa4f0f0b.css">
+
+        <!--[if lt IE 7]>
+          <link href="modules/noie6/noie6.css" media="all" rel="stylesheet" type="text/css" />
+        <![endif]-->
+        <script type="text/javascript" src="/sites/default/files/js/js_cb98fc7a539fb6195662b342a82457c5.jsmin.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","uc_ajax_cart":{"CALLBACK":"\/uc_ajax_cart\/add\/item","SHOW_CALLBACK":"\/uc_ajax_cart\/show","ADD_MESSAGE":"Add product to cart","ADD_TITLE":"Please wait","REMOVE_MESSAGE":"Remove product from cart","REMOVE_TITLE":"Please wait","CART_LINK_CALLBACK":"\/uc_ajax_cart\/addlink","BLOCK_UI":2,"TIMEOUT":3000,"UPDATE_CALLBACK":"\/uc_ajax_cart\/update","UPDATE_MESSAGE":"Update cart","SESSION":"17af03ad2776486e0de1fd88996e11bd","CART_OPERATION":"Cart","CART_VIEW_ON":1,"SHOW_VIEW_CALLBACK":"\/uc_ajax_cart\/show-cart-view"},"dhtmlMenu":{"slide":"slide","clone":"clone","doubleclick":"doubleclick","siblings":0,"relativity":0,"children":0},"fivestar":{"titleUser":"Your rating: ","titleAverage":"Community Rating: ","feedbackSavingVote":"Saving your vote...","feedbackVoteSaved":"Your vote has been saved.","feedbackDeletingVote":"Deleting your vote...","feedbackVoteDeleted":"Your vote has been deleted."},"googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip"},"thickbox":{"close":"Close","next":"Next \x3e","prev":"\x3c Prev","esc_key":"or Esc Key","next_close":"Next \/ Close on last","image_count":"Image !current of !total"}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","uc_ajax_cart":{"CALLBACK":"\/uc_ajax_cart\/add\/item","SHOW_CALLBACK":"\/uc_ajax_cart\/show","ADD_MESSAGE":"Add product to cart","ADD_TITLE":"Please wait","REMOVE_MESSAGE":"Remove product from cart","REMOVE_TITLE":"Please wait","CART_LINK_CALLBACK":"\/uc_ajax_cart\/addlink","BLOCK_UI":2,"TIMEOUT":3000,"UPDATE_CALLBACK":"\/uc_ajax_cart\/update","UPDATE_MESSAGE":"Update cart","SESSION":"7c48415227e82b793c1b4a28e7262437","CART_OPERATION":"Cart","CART_VIEW_ON":1,"SHOW_VIEW_CALLBACK":"\/uc_ajax_cart\/show-cart-view"},"fbconnect":{"api_key":"804361e081267600f574ee1b1cfb6934","xd_path":"fbconnect\/receiver","user_pictures":"allow","language_code":"en_US","featureLoader_url":"http:\/\/static.ak.connect.facebook.com\/js\/api_lib\/v0.4\/FeatureLoader.js.php\/en_US","debug":0,"loginout_mode":"manual","invite_name":"DearCinema","fast_reg_mode":1,"fbuid":null,"user":{"uid":0,"fbuid":null}},"noie6":null,"dhtmlMenu":{"slide":"slide","clone":"clone","doubleclick":"doubleclick","siblings":0,"relativity":0,"children":0},"fivestar":{"titleUser":"Your rating: ","titleAverage":"Community Rating: ","feedbackSavingVote":"Saving your vote...","feedbackVoteSaved":"Your vote has been saved.","feedbackDeletingVote":"Deleting your vote...","feedbackVoteDeleted":"Your vote has been deleted."},"googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip"},"thickbox":{"close":"Close","next":"Next \x3e","prev":"\x3c Prev","esc_key":"or Esc Key","next_close":"Next \/ Close on last","image_count":"Image !current of !total"}});
 //--><!]]>
 </script>
 <script type="text/javascript">
@@ -164,8 +168,14 @@ if (Drupal.jsEnabled) {
 		</div>
 						<div id="header-right" class="width99"><div id="block-block-19" class=" block block-block unstyled-block">
 
-
-  <div class="content"><p><a href="http://dearcinema.com/shoppe/discount-section" target="new"> <img class="mceItem" style="vertical-align: middle;" src="http://dearcinema.com/sites/default/files/bighomeoffer.jpg" alt="" width="728" height="90"> </a></p>
+  <div class="content"><p><script type="text/javascript">// &lt;![CDATA[
+google_ad_client = "pub-2496601510464576";
+/* Beta Leaderboard 728x90, created 8/19/09 */
+google_ad_slot = "8923118010";
+google_ad_width = 728;
+google_ad_height = 90;
+// ]]></script><script src="http://pagead2.googlesyndication.com/pagead/show_ads.js" type="text/javascript">
+</script></p>
 </div>
 </div>
 </div>
@@ -180,7 +190,6 @@ if (Drupal.jsEnabled) {
   	<div id="suckerfishmenu"><div id="block-menu-primary-links" class=" block block-menu unstyled-block">
 
   <h2>Primary links</h2>
-
   <div class="content"><ul class="menu"><li class="collapsed first no-dhtml  item-home"><a href="/" id="dhtml_menu-1266">Home</a></li>
 <li class="expanded  no-dhtml  item-cinema"><a href="/cinema" id="dhtml_menu-2096">Cinema</a><ul class="menu"><li class="leaf first no-dhtml  item-cinema_home"><a href="/cinema" id="dhtml_menu-2101">Cinema Home</a></li>
 <li class="leaf  no-dhtml  item-news"><a href="/news" title="News" id="dhtml_menu-3051">News</a></li>
@@ -198,17 +207,10 @@ if (Drupal.jsEnabled) {
 <li class="leaf last no-dhtml  item-user_blogs"><a href="/blog" id="dhtml_menu-4580">User Blogs</a></li>
 </ul></li>
 <li class="collapsed  no-dhtml  item-videos"><a href="/videos" id="dhtml_menu-5642">Videos</a></li>
-<li class="leaf  no-dhtml  item-my_dearcinema"><a href="/user/login?destination=user/me" title="Dashboard for registered users." id="dhtml_menu-3013">My Dearcinema</a></li>
-<li class="expanded last no-dhtml  item-shoppe"><a href="/shoppe" title="Shop for DVDs" id="dhtml_menu-4074">Shoppe</a><ul class="menu"><li class="leaf first no-dhtml  item-shoppe_home"><a href="/shoppe" title="Shoppe homepage" id="dhtml_menu-4076">Shoppe Home</a></li>
-<li class="leaf  no-dhtml  item-search_products"><a href="/search/product" title="Product Search" id="dhtml_menu-4078">Search Products</a></li>
-<li class="leaf  no-dhtml  item-customer_care"><a href="/customer-care" id="dhtml_menu-4079">Customer Care</a></li>
-<li class="leaf  no-dhtml  item-faq"><a href="/faq" title="Frequently asked questions on Dearcinema." id="dhtml_menu-4080">FAQ</a></li>
-<li class="leaf last no-dhtml  item-feedback"><a href="/feedback" title="Questions, Ideas, suggestions " id="dhtml_menu-4082">Feedback</a></li>
-</ul></li>
+<li class="leaf last no-dhtml  item-my_dearcinema"><a href="/user/login?destination=user/me" title="Dashboard for registered users." id="dhtml_menu-3013">My Dearcinema</a></li>
 </ul></div>
 </div>
 <div id="block-search-0" class="search-box block block-search unstyled-block">
-
 
   <div class="content"><form action="/privacy" accept-charset="UTF-8" method="post" id="search-block-form">
 <div><div class="container-inline">
@@ -291,7 +293,6 @@ if (Drupal.jsEnabled) {
                                 <div id="footer-left" class="width33"><div id="block-menu-menu-cinema-footer-menu" class=" block block-menu unstyled-block">
 
   <h2>Dearcinema</h2>
-
   <div class="content"><ul class="menu"><li class="leaf first dhtml-menu  item-cinema_home"><a href="/cinema" id="dhtml_menu-4016">Cinema Home</a></li>
 <li class="leaf  dhtml-menu  item-news"><a href="/news" id="dhtml_menu-4017">News</a></li>
 <li class="leaf  dhtml-menu  item-reviews"><a href="/reviews" title="Hollywood Bollywood Reviews" id="dhtml_menu-4018">Reviews</a></li>
@@ -304,22 +305,24 @@ if (Drupal.jsEnabled) {
 <li class="leaf last dhtml-menu  item-archive"><a href="/archive" id="dhtml_menu-4025">Archive</a></li>
 </ul></div>
 </div>
-</div>
-                                                                <div id="footer-center" class="width34"><div id="block-menu-menu-shoppe-footer-menu" class=" block block-menu unstyled-block">
+<div id="block-block-25" class=" block block-block unstyled-block">
 
-  <h2>Shoppe</h2>
-
-  <div class="content"><ul class="menu"><li class="leaf first dhtml-menu  item-shoppe_home"><a href="/shoppe" id="dhtml_menu-4013">Shoppe Home</a></li>
-<li class="leaf  dhtml-menu  item-search_products"><a href="/search/product" title="Search products on the site" id="dhtml_menu-4070">Search Products</a></li>
-<li class="leaf  dhtml-menu  item-customer_care"><a href="/customer-care" id="dhtml_menu-4011">Customer Care</a></li>
-<li class="leaf  dhtml-menu  item-faq"><a href="/faq" title="Frequently asked questions" id="dhtml_menu-4010">FAQ</a></li>
-<li class="leaf last dhtml-menu  item-feedback"><a href="/feedback" title="Feedback" id="dhtml_menu-4067">Feedback</a></li>
-</ul></div>
+  <div class="content"><p><script src="http://connect.facebook.net/en_US/all.js"></script><script type="text/javascript">// &lt;![CDATA[
+  FB.init({appId: '142867822405349', status: true, cookie: true, xfbml: true});
+  FB.Event.subscribe('auth.sessionChange', function(response) {
+    if (response.session) {
+      // A user has logged in, and a new cookie has been saved
+    } else {
+      // The user has logged out, and the cookie has been cleared
+    }
+  });
+// ]]></script></p>
 </div>
-<div id="block-menu-menu-community-footer-menu" class=" block block-menu unstyled-block">
+</div>
+</div>
+                                                                <div id="footer-center" class="width34"><div id="block-menu-menu-community-footer-menu" class=" block block-menu unstyled-block">
 
   <h2>Community</h2>
-
   <div class="content"><ul class="menu"><li class="leaf first dhtml-menu  item-community_home"><a href="/community" id="dhtml_menu-4030">Community Home</a></li>
 <li class="leaf  dhtml-menu  item-forum"><a href="/forum" id="dhtml_menu-4029">Forum</a></li>
 <li class="leaf last dhtml-menu  item-blog"><a href="/dearcinema-blog" id="dhtml_menu-4028">Blog</a></li>
@@ -329,7 +332,6 @@ if (Drupal.jsEnabled) {
                                                                 <div id="footer-right" class="width33"><div id="block-menu-secondary-links" class=" block block-menu unstyled-block">
 
   <h2>About</h2>
-
   <div class="content"><ul class="menu"><li class="leaf first dhtml-menu  item-about_us"><a href="/about" id="dhtml_menu-3027">About Us</a></li>
 <li class="leaf  dhtml-menu  item-advisory_board"><a href="/advisory-board" title="Advisory Board" id="dhtml_menu-3104">Advisory Board</a></li>
 <li class="leaf  dhtml-menu  item-our_authors"><a href="/our-authors" title="Our Authors" id="dhtml_menu-3103">Our Authors</a></li>
@@ -341,25 +343,6 @@ if (Drupal.jsEnabled) {
 <li class="leaf  dhtml-menu  item-site_map"><a href="/sitemap" title="Display a site map with RSS feeds." id="dhtml_menu-116">Site map</a></li>
 <li class="leaf last dhtml-menu  item-contact_us"><a href="/contact" id="dhtml_menu-167">Contact Us</a></li>
 </ul></div>
-</div>
-<div id="block-block-15" class=" block block-block unstyled-block">
-
-
-  <div class="content"><script type="text/javascript" charset="utf-8">
-  var is_ssl = ("https:" == document.location.protocol);
-  var asset_host = is_ssl ? "https://s3.amazonaws.com/getsatisfaction.com/" : "http://s3.amazonaws.com/getsatisfaction.com/";
-  document.write(unescape("%3Cscript src='" + asset_host + "javascripts/feedback-v2.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://s3.amazonaws.com/getsatisfaction.com/javascripts/feedback-v2.js" type="text/javascript"></script><script type="text/javascript" charset="utf-8">
-  var feedback_widget_options = {};
-
-  feedback_widget_options.display = "overlay";  
-  feedback_widget_options.company = "dearcinema";
-  feedback_widget_options.placement = "right";
-  feedback_widget_options.color = "#222";
-  feedback_widget_options.style = "idea";
-  
-  var feedback_widget = new GSFN.feedback_widget(feedback_widget_options);
-</script></div>
 </div>
 </div>
                         
@@ -444,7 +427,29 @@ Site by <a href="http://84ideas.com">84ideas</a></div>  <!-- end #footer -->
 
 </div>
 
-<script type="text/javascript" src="/sites/all/modules/adsense/contrib/adsense_click/adsense_click.js"></script><script type="text/javascript" src="/sites/default/files/js/js_5908fdda050902b40ad61822dc8dc01a.jsmin.js"></script>
+<script type="text/javascript" src="http://static.ak.connect.facebook.com/js/api_lib/v0.4/FeatureLoader.js.php/en_US"></script><div style="display: none"><form action="/privacy" accept-charset="UTF-8" method="post" id="fbconnect-autoconnect-form">
+<div><input type="submit" name="op" id="edit-connect" value="Connect" class="form-submit">
+<input type="hidden" name="form_id" id="edit-fbconnect-autoconnect-form" value="fbconnect_autoconnect_form">
+
+</div></form>
+</div>
+<div id="fb-root"><script async="" src="https://connect.facebook.net/en_US/all.js"></script></div><script type="text/javascript">
+     window.fbAsyncInit = function() {
+       FB.init({
+         appId: "142867822405349",
+         status: true, 
+         cookie: true,
+         xfbml: true});
+         
+     };
+     (function() {
+       var e = document.createElement('script'); 
+       e.async = true;
+       e.src = document.location.protocol + '//connect.facebook.net/en_US/all.js';
+       document.getElementById('fb-root').appendChild(e);
+     }());
+  </script>
+<script type="text/javascript" src="/sites/all/modules/adsense/contrib/adsense_click/adsense_click.js"></script><script type="text/javascript" src="/sites/default/files/js/js_a6700c0a880ea276dfe4d96636f9ee02.jsmin.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -456,10 +461,6 @@ var pageTracker = _gat._getTracker("UA-4141134-1");pageTracker._trackPageview();
 //--><!]]>
 </script>
 
-<!-- Authcache Footer JSON -->
 <script type="text/javascript">
-var authcacheFooter = {"info":{"page_render":1653.84,"cache_render":"-1","cache_uid":0,"cache_inc":"memcache.inc","cache_time":1276785249,"node_author":"NewsDesk"},"ajax":{"q":"node\/8731","statistics":1}};
-</script>
-
-
-</div></body></html>
+        Authcache.info = {"Reason":"PHP Error","type":2,"message":"Memcache::connect() [\x3ca href='memcache.connect'\x3ememcache.connect\x3c\/a\x3e]: Can't connect to localhost:11211, Connection refused (111)","file":"\/var\/www\/vhosts\/dearcinema.com\/httpdocs\/sites\/all\/modules\/memcache\/dmemcache.inc","line":189};
+        </script></div></body></html>
