--- a/c/co/cou/coupon-lady.com.html
+++ b/c/co/cou/coupon-lady.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the coupon-lady.com privacy policy that was archived on 2010-04-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100424070922id_/http%3A//coupon-lady.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the coupon-lady.com privacy policy that was archived on 2010-09-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100923153104id_/http%3A//coupon-lady.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -173,7 +173,15 @@ body {
 <div style="width:900px; height:30px; text-align:center; margin-top:20px;">
 <a href="http://www.coupon-lady.com">Home</a> | <a href="about.php">About</a> | <a href="contact.php">Contact</a> | <a href="coupons.php">Coupons</a> | <a href="savings-tips.php">Savings Tips</a> | <a href="terms.php">Terms and Conditions</a> | <a href="privacy.php">Privacy Policy</a> | <a href="sitemap.xml">Site Map</a></div> 
 </div>
-
-
+<script type="text/javascript">
+var pkBaseURL = (("https:" == document.location.protocol) ? "https://www.23ads.com/analytics/" : "http://www.23ads.com/analytics/");
+document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://www.23ads.com/analytics/piwik.js" type="text/javascript"></script><script type="text/javascript">
+try {
+var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 1);
+piwikTracker.trackPageView();
+piwikTracker.enableLinkTracking();
+} catch( err ) {}
+</script><noscript><p><img src="http://www.23ads.com/analytics/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
 
 </body></html>
