--- a/c/cp/cpm/cpmstar.com.html
+++ b/c/cp/cpm/cpmstar.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cpmstar.com privacy policy that was archived on 2010-05-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100527192824id_/http%3A//www.cpmstar.com/index.aspx%3Fnav%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cpmstar.com privacy policy that was archived on 2010-09-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100923160629id_/http%3A//cpmstar.com/index.aspx%3Fnav%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 	
