--- a/f/fr/fre/freemmorpglist.com.html
+++ b/f/fr/fre/freemmorpglist.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the freemmorpglist.com privacy policy that was archived on 2009-09-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090909001534id_/http%3A//www.mmognet.com/privacy.php%3Fdomini%3DRlJFRU1NT1JQR0xpc3QuQ29t) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freemmorpglist.com privacy policy that was archived on 2010-09-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100923204918id_/http%3A//www.mmognet.com/privacy.php%3Fdomini%3DRlJFRU1NT1JQR0xpc3QuQ29t) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy.</title>
@@ -13,7 +13,8 @@ FREEMMORPGList.Com created by <b>Online Ocigrup S.L</b>
 Dirección: Avenida Sarria, 52-54, 1º-2ª, 08029 Barcelona<br>
 Telf.: +34 93 494 06 98<br>
 Fax: +34 93 494 12 01<br>
-CIF: B64948318<br><br>
+CIF: B64948318<br>
+info'@'ocigrup'.'com<br><br>
 
 Datos Legales: R.M. de Barcelona, Tomo 40813, Folio21, Hoja B375951, Inscripción1<br><br>
 Privacy Policy for FREEMMORPGList.Com<br><br>
