--- a/z/zo/zoj/zojirushi.com.html
+++ b/z/zo/zoj/zojirushi.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the zojirushi.com privacy policy that was archived on 2010-01-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100103153732id_/http%3A//zojirushi.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the zojirushi.com privacy policy that was archived on 2010-09-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100924002820id_/http%3A//www.zojirushi.com/privacypolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- InstanceBegin template="/Templates/template.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -500,10 +500,8 @@ function MM_swapImage() { //v3.0
                   <td bgcolor="#7492CC"><span class="smallerblack"><a href="/ourproducts/lunchjars/lunchjars.html" class="riClass4Ri11"> 
                     Lunch Jars</a></span></td>
                 </tr>
-				<tr> 
-                  <td bgcolor="#7492CC"><span class="smallerblack"><a href="/ourproducts/hes/hes.html" class="riClass4Ri11"> 
-                    Home Environment</a></span></td>
-                </tr>
+				
+
 				 <tr> 
                   <td bgcolor="#7492CC"><span class="smallerblack"><a href="/ourproducts/zuttos/zuttos.html" class="riClass4Ri11"> 
                     ZUTTO Collection</a></span></td>
