--- a/i/in/ind/indusnet.co.in.html
+++ b/i/in/ind/indusnet.co.in.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the indusnet.co.in privacy policy that was archived on 2010-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100610191924id_/http%3A//www.indusnet.co.in/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the indusnet.co.in privacy policy that was archived on 2010-09-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100924051156id_/http%3A//indusnet.co.in/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
