--- a/g/gi/gir/girl-directory.com.html
+++ b/g/gi/gir/girl-directory.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the girl-directory.com privacy policy that was archived on 2010-04-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100415153857id_/http%3A//www.girl-directory.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the girl-directory.com privacy policy that was archived on 2010-09-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100924112327id_/http%3A//girl-directory.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <html><head>
 
