--- a/n/na/nak/nakedpr.com.html
+++ b/n/na/nak/nakedpr.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nakedpr.com privacy policy that was archived on 2010-05-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100524193058id_/http%3A//nakedpr.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nakedpr.com privacy policy that was archived on 2010-09-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100924154121id_/http%3A//nakedpr.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -165,4 +165,11 @@ try {
 var pageTracker = _gat._getTracker("UA-11545256-3");
 pageTracker._trackPageview();
 } catch(err) {}</script>
+<!-- Kontera ContentLink(TM);-->
+<script type="text/javascript">
+var dc_AdLinkColor = 'blue' ; 
+var dc_PublisherID = 150522 ; 
+</script>
+<script type="text/javascript" src="http://kona.kontera.com/javascript/lib/KonaLibInline.js">
+</script>
 </body></html>
