--- a/t/te/tem/tempurpedic.com.html
+++ b/t/te/tem/tempurpedic.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the tempurpedic.com privacy policy that was archived on 2010-06-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100617145043id_/http%3A//www.tempurpedic.com/customer_service/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tempurpedic.com privacy policy that was archived on 2010-09-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100924215939id_/http%3A//www.tempurpedic.com/customer_service/privacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Tempur-Pedic® - Mattresses, Pillows, Sleep Systems- Welcome to Bed.™</title>	
 	
-	<link rel="stylesheet" type="text/css" media="all" href="http://www.tempurpedic.com/?css=global2/.css_master2.v.1268670872">
+	<link rel="stylesheet" type="text/css" media="all" href="http://www.tempurpedic.com/?css=global2/.css_master2.v.1278678307">
 	<link rel="stylesheet" type="text/css" media="all" href="http://www.tempurpedic.com/?css=customer_service/.css_local.v.1262659641">
 
 <script src="http://www.tempurpedic.com/global2/js_jquery-1.3.2.min/" type="text/javascript"></script>
@@ -279,6 +279,8 @@ else document.write(unescape(l[i]));
 <li><a href="http://www.tempurpedic.com/pillows/therapy/the_sidepillow_by_tempur_pedic/" title="The SidePillow by Tempur-Pedic®">SidePillow</a></li>
 
 
+		
+			<li><a href="http://www.tempurpedic.com/pillows/comfort/tempur_cloud_pillow/" title="TEMPUR-Cloud™ Pillow">TEMPUR-CloudPillow</a></li>
 		
 			<li><a href="http://www.tempurpedic.com/pillows/comfort/the_suprimapillow_by_tempur_pedic/" title="The SuprimaPillow by Tempur-Pedic™">SuprimaPillow</a></li>
 		
