--- a/m/my/myf/myfooddiary.com.html
+++ b/m/my/myf/myfooddiary.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the myfooddiary.com privacy policy that was archived on 2010-02-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100202082430id_/http%3A//www.myfooddiary.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the myfooddiary.com privacy policy that was archived on 2010-09-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100925043204id_/http%3A//www.myfooddiary.com/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<title>My Food Diary :: Privacy Policy</title>
@@ -46,7 +46,7 @@
                 <td width="72"><a href="#top" onclick="document.getElementById('grayout').style.height='100%';document.getElementById('grayout').style.visibility='visible';document.getElementById('rememberMe').style.visibility='visible';" style="font-size:7pt;color:#87A743">remember me</a></td>
               </tr>
               </tbody></table>            </td>
-            <td colspan="2"><a href="#" onclick="javascript:window.open('/pop_forgot_login.asp','_new','width=300,height=250,screenX=2,screenY=2,top=2,left=2,resizable=yes');return false;" style="font-size:7pt;color:#87A743">forgot your login info?</a></td>
+            <td colspan="2"><a href="#" onclick="javascript:window.open('/pop_forgot_login.asp','_new','width=318,height=250,screenX=2,screenY=2,top=2,left=2,resizable=yes');return false;" style="font-size:7pt;color:#87A743">forgot your login info?</a></td>
             </tr>
       </tbody></table></form></td>
     </tr>
@@ -187,15 +187,15 @@ Last Updated on 1/18/2010
 	<td bgcolor="#DEDEDE"><img src="/images/spacer.gif" width="1" height="1" alt=""></td>
   </tr>
 </tbody></table>
-
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
 <script type="text/javascript">
+try {
 var pageTracker = _gat._getTracker("UA-5509102-1");
 pageTracker._trackPageview();
-</script>
+} catch(err) {}</script>
 
 
 </body></html>
