--- a/p/pu/pub/publicmutual.com.my.html
+++ b/p/pu/pub/publicmutual.com.my.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the publicmutual.com.my privacy policy that was archived on 2010-05-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100526165533id_/http%3A//www.publicmutual.com.my/page.aspx%3Fname%3Dprivacy%2520policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the publicmutual.com.my privacy policy that was archived on 2010-09-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100925054752id_/http%3A//www.publicmutual.com.my/page.aspx%3Fname%3Dprivacy%2520policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 		<title>page</title>
@@ -23,7 +23,7 @@
 	var dayarray=new Array("Sun","Mon","Tue","Wed","Thu","Fri","Sat")
 	var montharray=new Array("Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec")
 
-	var strDate = 'May 27, 2010 00:55:32';
+	var strDate = 'Sep 25, 2010 13:47:51';
 	var dtServerInit = new Date(strDate);	// get server date time
 	var intSeconds = 0;			// number of seconds passed since dtServerInit (ie: since page load)
 	
@@ -59,12 +59,12 @@
 <table width="800" border="0" cellspacing="0" cellpadding="0" height="62">
 	<tbody><tr><td colspan="7" align="right" valign="center" height="60" background="Http://www.publicmutual.com.my/images/klmutual_lg_bg.gif">
 	<!--a href="/signup.aspx"><img src="Http://www.publicmutual.com.my/images/adView.gif" border="0"></a-->
-	<a href="http://www.publicmutual.com.my/page.aspx?name=prs_rls_100223_1726" id="Header1_link"><img src="http://www.publicmutual.com.my/images/imgfiles/MARKETING/theegelipper2010_02.gif" id="Header1_file" border="0"></a>
+	<a href="http://www.publicmutual.com.my/page.aspx?name=PublicMutual35thAnniversary" id="Header1_link"><img src="http://www.publicmutual.com.my/images/imgfiles/MARKETING/index06_topwebsite.jpg" id="Header1_file" border="0"></a>
 </td></tr>
 </tbody></table>
 <table width="800" border="0" bgcolor="#003399">
 	<tbody><tr>
-		<td><font color="#ffffff" face="Arial,Helvetica,sans-serif" size="-2"><div id="clock"><font color="FFFFFF" face="Arial"><b>12:55:33&nbsp;AM&nbsp;&nbsp;Thu,27 May 2010 </b></font></div></font></td>
+		<td><font color="#ffffff" face="Arial,Helvetica,sans-serif" size="-2"><div id="clock"><font color="FFFFFF" face="Arial"><b>1:47:52&nbsp;PM&nbsp;&nbsp;Sat,25 Sep 2010 </b></font></div></font></td>
 		<td width="65" align="center"><a href="Http://www.publicmutual.com.my/index.aspx" style="FONT-SIZE:8pt;COLOR:#ffffff;TEXT-DECORATION:none"><font face="Arial,Helvetica,sans-serif"><b>Home</b></font></a></td>
 		<td width="3" align="center"><font color="#ffffff" size="-1">|</font></td>
 		<td width="70" align="center"><a href="Http://www.publicmutual.com.my/page.aspx?name=aboutus" style="FONT-SIZE:8pt;COLOR:#ffffff;TEXT-DECORATION:none"><font face="Arial,Helvetica,sans-serif"><b>About Us</b></font></a></td>
